Networking/clusterIP.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-clusterip
spec:
  selector:
    apps: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
