Networking/nodeport_nginx.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-nodeport
spec:
 type: NodePort
 selector:
  apps: drupal
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
   nodePort: 30050   # listning port

---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nodeport-deployment
spec:
  replicas: 2
  selector:
   matchLabels:
    apps: drupal
  template:
   metadata:
    labels:
     apps: drupal
   spec:
    containers:
    - name: drupal
      image: nginx
      ports:
      - containerPort: 80
